Added i10n to login.jsp and registration.jsp

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -23,9 +23,33 @@ message.addshipservicetoship.delete=Remove services from the ship
 message.addshipservicetoship.create=Create service
 message.addshipservicetoship.payable=Payable
 message.addshipservicetoship.free=Free
+message.addshipservicetoship.error=You need to choose a ship
 message.headerunregistred.signin=Sign in
 message.headerunregistred.signup=Sign up
 message.headerregistred.mycruises=My cruises
 message.headerregistred.mycart=My cart
 message.headerregistred.myaccount=My account
 message.headerregistred.logout=Log out
+message.login.title=Sign in
+message.login.signin=Please sign in!
+message.login.login=Login:
+message.login.password=Password:
+message.login.tologin=Login
+message.register.errorthereisuser=Failed to register user. Try again
+message.register.title=Registration
+message.register.registrationadv=Please Sign Up!
+message.register.login=Login:
+message.register.password=Password:
+message.register.passworddupl=Password (duplicate):
+message.register.firstname=First name:
+message.register.lastname=Last name:
+message.register.email=Email:
+message.register.tel=Telephone:
+message.register.registrbtn=Registration
+message.register.errorpass1and2=Passwords in field 1 and 2 do not match
+message.register.erroremptyfild=Login and Password fields must be filled
+message.addshipservicetoship.errorshipnotfound=Could not find such a ship in the system
+message.addshipservicetoship.errorservicenotfound=Could not find such a service in the system
+message.addshipservicetoship.serviceadded=Service successfully added
+message.addshipservicetoship.errorserviceduplicate=Such a service is already on the ship, select another
+message.addshipservicetoship.errorservicefaild=Failed to add the service, check the fields are filled in correctly
