Added i10n to addshipservicestosystem.jsp

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -53,3 +53,10 @@ message.addshipservicetoship.errorservicenotfound=Could not find such a service 
 message.addshipservicetoship.serviceadded=Service successfully added
 message.addshipservicetoship.errorserviceduplicate=Such a service is already on the ship, select another
 message.addshipservicetoship.errorservicefaild=Failed to add the service, check the fields are filled in correctly
+message.addshipservicestosystem.title=Add ship services to system
+message.addshipservicestosystem.service=Service
+message.addshipservicestosystem.createservicebtn=Create service
+message.addshipservicestosystem.existinginsystem=Existing services in the system:
+message.addshipservicestosystem.servicealreadyexist=This service is already in the system
+message.addshipservicestosystem.faildtocreate=Failed to create a service, check the fields are filled in correctly
+message.addshipservicestosystem.creationok=Service successfully created
