Added i10n to createexcursion.jsp

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -71,3 +71,13 @@ message.changeuserrole.errnorole=No such role found
 message.changeuserrole.errnotadmin=Only an administrator can change user roles
 message.changeuserrole.errfaild=Failed to change user role, check the fields are filled in correctly
 message.changeuserrole.ok=Role successfully changed
+message.createexcursion.title=Create excursion
+message.createexcursion.selectorcreateport=Select the port where you want to add the excursions or create new port
+message.createexcursion.createportbtn=Create port
+message.createexcursion.ok=Tour successfully created
+message.createexcursion.selectport=Please select the port
+message.createexcursion.excursionname=Tour name: (maximum 100 characters)
+message.createexcursion.excursiondesc=Tour description: (maximum 1000 characters)
+message.createexcursion.price=Price:
+message.createexcursion.createexcurbtn=
+message.createexcursion.errfaild=Failed to create a tour, check the fields are filled in correctly
