Added i10n to createnewport.jsp

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -81,3 +81,10 @@ message.createexcursion.excursiondesc=Tour description: (maximum 1000 characters
 message.createexcursion.price=Price:
 message.createexcursion.createexcurbtn=
 message.createexcursion.errfaild=Failed to create a tour, check the fields are filled in correctly
+message.createport.title=Create port
+message.createport.createnewport=Create new port
+message.createport.country=Country:
+message.createport.city=City:
+message.createport.createbtn=Create
+message.createport.errfaild=Failed to create port, check the fields are filled in correctly
+message.createport.ok=Port successfully created
