Added i10n to account pages

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -79,7 +79,7 @@ message.createexcursion.selectport=Please select the port
 message.createexcursion.excursionname=Tour name: (maximum 100 characters)
 message.createexcursion.excursiondesc=Tour description: (maximum 1000 characters)
 message.createexcursion.price=Price:
-message.createexcursion.createexcurbtn=
+message.createexcursion.createexcurbtn=Create excursion
 message.createexcursion.errfaild=Failed to create a tour, check the fields are filled in correctly
 message.createport.title=Create port
 message.createport.createnewport=Create new port
@@ -113,3 +113,13 @@ message.editaccount.eerupdate=Data not updated
 message.editaccount.errfillall=All fields are required
 message.editaccount.errorpass1and2=Passwords in field 1 and 2 do not match
 message.editaccount.uniq=Login and phone number must be unique!
+message.myaccount.title=My account
+message.myaccount.editaccountbtn=Edit account
+message.myaccount.managebonus=Manage bonuses
+message.myaccount.createship=Create ship
+message.myaccount.createport=Create port
+message.myaccount.createexcursion=Create excursion
+message.myaccount.createcruise=Create cruise
+message.myaccount.changeuserrole=Change user role
+message.myaccount.addservicestosystem=Add ship services to system
+message.myaccount.addremoveservicestoship=Add/remove services to ship
