Added logic to manager role - add bonuses. Still didn't check because there is not JSP page for it

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,6 +2,7 @@
 
 path.page.addshipservicetoship=/WEB-INF/jsp/addshipservicetoship.jsp
 path.page.addshipservicestosystem=/WEB-INF/jsp/addshipservicestosystem.jsp
+path.page.managebonuses=/WEB-INF/jsp/managebonuses.jsp
 path.page.changeuserrole=/WEB-INF/jsp/changeuserrole.jsp
 path.page.createcruise=/WEB-INF/jsp/createcruise.jsp
 path.page.createexcursion=/WEB-INF/jsp/createexcursion.jsp
