--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -123,3 +123,4 @@ message.myaccount.createcruise=Create cruise
 message.myaccount.changeuserrole=Change user role
 message.myaccount.addservicestosystem=Add ship services to system
 message.myaccount.addremoveservicestoship=Add/remove services to ship
+message.addbonuses.errselectcruise=You have to select cruise
