--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,16 @@
       <version>1.2.17</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
+    </dependency>
 
-<!--    <dependency>-->
+
+
+    <!--    <dependency>-->
 <!--      <groupId>org.apache.logging.log4j</groupId>-->
 <!--      <artifactId>log4j-api</artifactId>-->
 <!--      <version>2.11.0</version>-->
