Added viewport.jsp and viewexcursion.jsp with logic and localization

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -11,7 +11,6 @@ message.addshipservicetoship.advert=You must first select a ship
 
 
 message.loginerror=Incorrect login or password. Try again
-message.nullpage=Page not found. Business logic error.
 message.addshipservicetoship.advert2=Please select the ship
 message.addshipservicetoship.title=Add service to ship
 message.addshipservicetoship.advert3=Please select the service
@@ -76,8 +75,8 @@ message.createexcursion.selectorcreateport=Select the port where you want to add
 message.createexcursion.createportbtn=Create port
 message.createexcursion.ok=Tour successfully created
 message.createexcursion.selectport=Please select the port
-message.createexcursion.excursionname=Tour name: (maximum 100 characters)
-message.createexcursion.excursiondesc=Tour description: (maximum 1000 characters)
+message.createexcursion.excursionname=Tour name: (maximum 256 characters)
+message.createexcursion.excursiondesc=Tour description: (maximum 8000 characters)
 message.createexcursion.price=Price:
 message.createexcursion.createexcurbtn=Create excursion
 message.createexcursion.errfaild=Failed to create a tour, check the fields are filled in correctly
@@ -167,4 +166,15 @@ message.createcruise.finishcruise=Cruise end:
 message.createcruise.createcruisebtn=Create cruise
 message.createcruise.errcreate=Failed to create a cruise, check the fields are filled in correctly
 message.createcruise.selectshipplease=Please select a ship
-message.headerregistred.startpage=Start page
+message.headerregistred.startpage=Main page
+message.viewport.title=View port
+message.viewport.price=Price:
+message.viewport.excursion=Excursions in 
+message.viewport.err=Could not find the selected port
+message.viewport.morebtn=More details
+message.viewport.addbtn=Add to cart
+message.viewexcursion.detail=Excursion details
+message.viewexcursion.description=Description:
+message.viewexcursion.price=Price:
+message.viewexcursion.addtocart=Add to cart
+message.viewexcursion.errgetallexcur=
