Selected string constants in a separate file and refactored a little

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -178,3 +178,6 @@ message.viewexcursion.description=Description:
 message.viewexcursion.price=Price:
 message.viewexcursion.addtocart=Add to cart
 message.viewexcursion.errgetallexcur=
+message.viewcart.del=Delete
+message.viewcart.pay=Pay
+message.viewcart.title=My cart
