Added localization to DeleteShipServicesFromShip

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -181,3 +181,5 @@ message.viewexcursion.errgetallexcur=
 message.viewcart.del=Delete
 message.viewcart.pay=Pay
 message.viewcart.title=My cart
+message.addshipservicetoship.errdelete=Failed to delete services
+message.addshipservicetoship.delok=Services removed
