Added functionality: add to cart, delete from cart, view cart, view cruise, pay and localization for all this classes

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -183,3 +183,44 @@ message.viewcart.pay=Pay
 message.viewcart.title=My cart
 message.addshipservicetoship.errdelete=Failed to delete services
 message.addshipservicetoship.delok=Services removed
+message.viewcruise.errfind=Could not find the selected cruise
+message.viewcruise.addbtn=Add to cart
+message.viewcruise.errgetall=Failed to get all cruises
+message.pay.errpay=Failed to pay for the purchase
+message.pay.ok=Purchase paid
+message.viewcruise.country=Country
+message.viewcruise.city=City
+message.viewcruise.arrival=Arrival
+message.viewcruise.departure=Departure
+message.viewcruise.details=Details
+message.viewcruise.firstclass=First class:
+message.viewcruise.secondclass=Second class:
+message.viewcruise.thirdclass=Third class:
+message.viewcruise.fourthclass=Fourth class:
+message.viewcart.cart=My cart
+message.viewcart.cruisenum=Cruise number:
+message.viewcart.shipname=Ship name:
+message.viewcart.ticketclass=Ticket class:
+message.viewcart.price=Price:
+message.viewcart.moredetails=More details
+message.viewcart.delfromcart=Delete from cart
+message.viewcart.dellall=Delete all
+message.viewcart.payall=Pay all
+message.viewcart.selectedcruises=Selected cruises and excursions
+message.addtocart.errgetcruisesandtickets=Failed to get all cruises or ticket classes
+message.addtocart.cruiseadded=Cruise added to cart
+message.addtocart.erraddcruise=Error adding cruise to cart
+message.addtocart.erraddexcur=Error adding excursion to cart
+message.addtocart.excuradded=Excursion added to cart
+message.addtocart.excurnotfound=Excursion not found
+message.deletefromcart.errdelexcursion=Failed to delete excursion from cart
+message.deletefromcart.errdelcruise=Failed to delete cruise from cart
+message.deletefromcart.delexcurok=Excursion removed from cart
+message.deletefromcart.excurnotfound=Excursion not found in cart
+message.deletefromcart.delcruise=Cruise removed from cart
+message.deletefromcart.cruisenotfound=Cruise not found in cart
+message.viewcruise.buy=Buy a cruise
+message.viewcruise.cruiseInfo=Cruise information
+message.startpage.title=Main page
+message.startpage.availcruises=Available cruises
+
