Added viewmycruises.jsp and a history viewer called "my cruises"

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -223,4 +223,6 @@ message.viewcruise.buy=Buy a cruise
 message.viewcruise.cruiseInfo=Cruise information
 message.startpage.title=Main page
 message.startpage.availcruises=Available cruises
+message.viewmycruises.title=My purchases
+message.viewmycruises.history=My purchases
 
