--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ua.epam</groupId>
+  <groupId>ua.study</groupId>
   <artifactId>cruisecompany</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
@@ -42,7 +42,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
-      <version>1.9.5</version>
+      <version>2.0.2-beta</version>
       <scope>test</scope>
     </dependency>
 
