--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
     <filter>
         <filter-name>FormEncodingFilter</filter-name>
-        <filter-class>ua.study.poject.cruise.filter.FormEncodingFilter</filter-class>
+        <filter-class>ua.study.poject.cruise.filter.EncodingFilter</filter-class>
         <init-param>
             <param-name>encoding</param-name>
             <param-value>UTF-8</param-value>
@@ -29,10 +29,6 @@
         <filter-name>LocalCookies</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
-    <!--    <welcome-file-list>-->
-    <!--        <welcome-file>/index.jsp</welcome-file>-->
-    <!--    </welcome-file-list>-->
 
     <jsp-config>
         <jsp-property-group>
